--- a/src/assets/styles/layout.css
+++ b/src/assets/styles/layout.css
@@ -39,6 +39,13 @@
     background-color: white;   
 }
 
+.opt-mobile-header-row {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    align-items: center;
+}
+
 body {
     overflow-x: hidden;
     background-color: #efefef;
