--- a/src/assets/styles/home.css
+++ b/src/assets/styles/home.css
@@ -19,3 +19,74 @@
 .opt-carousel-container .slick-dots {
     bottom: 25px;
 }
+
+.opt-footer-container {
+    margin-bottom: -15px;
+    bottom: 0;
+    width: 100%;
+    position: sticky;
+}
+
+.ui.text.opt-main-footer.menu .item {
+    width: 24%;
+    text-align: center;
+    justify-content: center;
+    cursor: pointer;
+}
+
+.opt-home-happy-stories-heading {
+    padding: 20px;
+    font-size: 18px;
+    font-style: italic;
+    font-weight: 700;
+}
+
+.ui.cards {
+    padding-left: 20px;
+}
+
+ul { 
+    margin: 150px auto 0; 
+    padding: 0; 
+    list-style: none; 
+    display: table;
+    width: 600px;
+    text-align: center;
+  }
+  li { 
+    display: table-cell; 
+    position: relative; 
+    padding: 15px 0;
+  }
+  a {
+    color: #bd1717;
+    text-transform: uppercase;
+    text-decoration: none;
+    letter-spacing: 0.15em;
+    
+    display: inline-block;
+    padding: 15px 20px;
+    position: relative;
+  }
+  a:after {    
+    background: none repeat scroll 0 0 transparent;
+    bottom: 0;
+    content: "";
+    display: block;
+    height: 2px;
+    left: 50%;
+    position: absolute;
+    background: #fff;
+    transition: width 0.3s ease 0s, left 0.3s ease 0s;
+    width: 0;
+  }
+  a:hover:after { 
+    width: 100%; 
+    left: 0; 
+  }
+  @media screen and (max-height: 300px) {
+      ul {
+          margin-top: 40px;
+      }
+  }
+  
