--- a/src/assets/styles/home.css
+++ b/src/assets/styles/home.css
@@ -58,7 +58,7 @@ ul {
     position: relative; 
     padding: 15px 0;
   }
-  a {
+  li a {
     color: #bd1717;
     text-transform: uppercase;
     text-decoration: none;
